[feature] Support add_export and add_opens for java_library | #BAZEL-1082 done